<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    tools:layout_editor_absoluteY="25dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:keepScreenOn="true"
        android:text="@string/splash_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:shadowColor="@color/Gray30"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:keepScreenOn="true"
        android:text="@string/app_version"
        android:textAlignment="viewStart"
        android:textColor="@color/White"
        android:shadowColor="@color/Gray30"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textAppName" />


    <TextView
        android:id="@+id/textOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:keepScreenOn="true"
        android:text="@string/app_description"
        android:textAlignment="viewStart"
        android:textColor="@color/White"
        android:shadowColor="@color/Gray30"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textVersion" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:keepScreenOn="false"
        android:text="@string/app_copyright"
        android:textAlignment="viewEnd"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textAllright"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />

    <TextView
        android:id="@+id/textAllright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:keepScreenOn="true"
        android:text="@string/app_allrights"
        android:textAlignment="viewEnd"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />

</androidx.constraintlayout.widget.ConstraintLayout>